--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".broadcast.MusicBroadcastReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.example.music.MUSIC_BROADCAST"/>
+            </intent-filter>
+        </receiver>
     </application>
-
 </manifest>
