--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,10 @@ android {
     }
     buildFeatures {
         viewBinding true
+        //noinspection DataBindingWithoutKapt
         dataBinding true
     }
+
 }
 
 dependencies {
